@@ -1,3 +1,9 @@
+2006-07-08  Viktor Griph  <griph@dd.chalmers.se>
+
+	* configure.in: 
+	Added $EXEEXT to FvwmGtk, FvwmBanner, xpmroot and FvwmScript to fix
+	build on Cygwin.
+
 2006-03-02  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* acinclude.m4 (AM_PATH_GTK):
